Fri Dec 15 18:17:36 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

          Updating the test to make it behave appropriately for
          multi-threaded and for single-threaded (thread unsafe?)
          configurations.

        * tests/ORB_Local_Config/Bug_2612/Bug_2612.mpc:
        * tests/ORB_Local_Config/Bug_2612/DllOrb.h:
        * tests/ORB_Local_Config/Bug_2612/DllOrb.cpp:
        * tests/ORB_Local_Config/Bug_2612/Test.cpp:
        * tests/ORB_Local_Config/ORB_Local_Config.mwc:

Fri Dec 15 17:26:59 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/IDL_Test.mpc:

          Fixed previous change to this file in

          Wed Dec 13 18:16:28 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

          that was excluding the *A.cpp file from the build.

Fri Dec 15 16:32:35 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/ORT/Makefile.am:
        * tests/Objref_Sequence_Test/Makefile.am:
        * tests/Ondemand_Write/Makefile.am:
        * tests/Oneway_Buffering/Makefile.am:
        * tests/Oneways_Invoking_Twoways/Makefile.am:

          Regenerated.

        * tests/ORT/ORT.mpc:
        * tests/Objref_Sequence_Test/Objref_Sequence_Test.mpc:
        * tests/Ondemand_Write/Ondemand_Write.mpc:
        * tests/Oneway_Buffering/Oneway_Buffering.mpc:
        * tests/Oneways_Invoking_Twoways/Oneways_Invoking_Twoways.mpc:

          Split out IDL compilation into separate MPC project.

Thu Dec 14 16:58:18 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/MProfile/Makefile.am:

          Regenerated.

        * tests/MProfile/MProfile.mpc:

          Changed IDL project to inherit from iormanip.
          Changed Client project to not include testS.cpp.

Thu Dec 14 16:18:00 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Server_Connection_Purging/Server_Connection_Purging.mpc:

          Fix typo in IDL project name that broke build dependencies.
