@@ -1,6 +1,7 @@
 // -*- C++ -*-
 
 #include "ace/Get_Opt.h"
+#include "ace/OS_NS_unistd.h"
 
 #include "test_i.h"
 #include "ServerORBInitializer.h"
@@ -144,6 +145,7 @@ main (int argc, char *argv[])
       orb->run (ACE_ENV_SINGLE_ARG_PARAMETER);
       ACE_TRY_CHECK;
 
+      ACE_OS::sleep(1);
       orb->destroy (ACE_ENV_SINGLE_ARG_PARAMETER);
       ACE_TRY_CHECK;
 
